src/main/java/com/example/study/practicalprogramming/chapter01/bad/Food.java
package com.example.study.practicalprogramming.chapter01.bad;

import lombok.Getter;

@Getter
public class Food {

    private long price;
    private long originCost;
}
